Add multi-arch (amd64/arm64) Docker build support

--- a/.github/workflows/build-and-update.yaml
+++ b/.github/workflows/build-and-update.yaml
@@ -24,10 +24,16 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
     - name: Build and Push Image
-      run: |
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/myapp:${{ steps.vars.outputs.SHA_TAG }} ./myapp
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/myapp:${{ steps.vars.outputs.SHA_TAG }}
+      uses: docker/build-push-action@v6
+      with:
+        context: ./myapp
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/myapp:${{ steps.vars.outputs.SHA_TAG }}
 
     - name: Clone GitOps Repo
       run: |
